--- a/CTFd/themes/core/templates/register.html
+++ b/CTFd/themes/core/templates/register.html
@@ -20,8 +20,9 @@
 				</div>
 			{% endfor %}
 
+			{% if oauth_client_secret is defined and oauth_client_id != None and oauth_client_id != '' %}
 			<a class="btn btn-secondary btn-lg btn-block" href="{{ url_for('auth.oauth_login') }}">Login with Major League Cyber</a>
-
+			{% endif%}
 			<hr>
 
 			<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
